added edit todo and bootstrap

--- a/angular-crash-todolist-master/src/app/components/todo-item/todo-item.component.html
+++ b/angular-crash-todolist-master/src/app/components/todo-item/todo-item.component.html
@@ -9,6 +9,7 @@
     <label for="{{ todo.id }}">
       {{ todo.title }}
     </label>
+    <button (click)="onEdit(todo)" >Edit</button>
     <button (click)="onDelete(todo)" class="del">X</button>
   </p>
 </div>
